--- a/pimcore/lib/Pimcore/Bundle/CoreBundle/Resources/translations/en.json
+++ b/pimcore/lib/Pimcore/Bundle/CoreBundle/Resources/translations/en.json
@@ -1689,5 +1689,18 @@
   "offset": "Offset (0-...)",
   "col_attribute": "Collection Attribute",
   "brick_attribute": "Brick Attribute",
-  "brick_type": "Brick Type"
+  "brick_type": "Brick Type",
+  "operator_ignore" : "Operator Ignore",
+  "csv_column_configuration": "Column Configuration",
+  "import_configuration": "Import Configuration",
+  "col_idx": "Col Idx",
+  "col_label" : "Sample",
+  "operator_ignore_setting": "Operatore Ignore Settings",
+  "save_configuration": "Save configuration",
+  "column": "Column",
+  "resolver_strategy": "Resolver Strategy",
+  "resolver_settings": "Resolver Settings",
+  "csv_settings": "CSV Settings",
+  "skipheadrow": "Skip head row"
+
 }
