Object Import Improvements #1796 - prototyping

--- a/pimcore/lib/Pimcore/Bundle/CoreBundle/Resources/translations/en.json
+++ b/pimcore/lib/Pimcore/Bundle/CoreBundle/Resources/translations/en.json
@@ -1708,6 +1708,6 @@
   "delete_importconfig_dblcheck": "Are you sure? Also note that this could be a shared config.",
   "importconfig_removed": "Import config has been removed",
   "importconfig_not_removed": "Import config could not be removed",
-  "import_export_configuration": "Import Export configuration"
-
+  "import_export_configuration": "Import Export configuration",
+  "col_label": "Label"
 }
